force-app/main/default/objects/WorkOrderLineItem/fields/Billable_Hours_Update_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Update_Reason__c</fullName>
    <label>Billable Hours Update Reason</label>
    <type>TextArea</type>
</CustomField>