force-app/main/default/objects/WorkOrderLineItem/fields/Consumed_Pre_Purchased_Hours__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Pre_Purchased_Hours__c</fullName>
    <label>Consumed Pre Purchased Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>