force-app/main/default/objects/WorkOrderLineItem/fields/Do_not_show_in_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>Do_not_show_in_Service_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to filter records to be displayed on the service report</description>
    <label>Do not show in Service Report</label>
    <type>Checkbox</type>
</CustomField>