force-app/main/default/objects/WorkOrderLineItem/fields/Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When the checkbox is checked, the system will no longer update the record to calculate rates, time and split transactions</inlineHelpText>
    <label>Manual Override</label>
    <type>Checkbox</type>
</CustomField>