force-app/main/default/objects/WorkOrderLineItem/fields/Manual_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override_Reason__c</fullName>
    <label>Manual Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>