force-app/main/default/objects/WorkOrderLineItem/fields/Press_Save_to_confirm_your_action__c.field-meta.xml
<CustomField>
    <fullName>Press_Save_to_confirm_your_action__c</fullName>
    <label>Press Save to confirm Pronto Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>