force-app/main/default/objects/WorkOrderLineItem/fields/Pronto_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Pronto_Account_Code__c</fullName>
    <formula>ServiceTerritory.Branch_Code__c</formula>
    <label>Pronto Account Code</label>
    <type>Text</type>
</CustomField>