force-app/main/default/objects/WorkOrderLineItem/fields/Pronto_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Pronto_Record_ID__c</fullName>
    <description>External key</description>
    <externalId>true</externalId>
    <label>Pronto Record ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>