force-app/main/default/objects/WorkOrderLineItem/fields/Resource_Formula__c.field-meta.xml
<CustomField>
    <fullName>Resource_Formula__c</fullName>
    <description>This field is used in Service Report</description>
    <formula>IF(Employee__c &lt;&gt; NULL,  Employee__r.Name ,  IF(Resource__c &lt;&gt; NULL,  Resource__r.Name , &#39;Material/Equipment&#39;))</formula>
    <label>Resource</label>
    <type>Text</type>
</CustomField>