force-app/main/default/objects/WorkOrderLineItem/fields/SA_Completed__c.field-meta.xml
<CustomField>
    <fullName>SA_Completed__c</fullName>
    <formula>IF(OR( ISPICKVAL(Service_Appointment__r.Status, &#39;Completed&#39;) , ISPICKVAL(Service_Appointment__r.Status, &#39;Cannot Complete&#39;)), true, false)</formula>
    <label>SA Completed</label>
    <type>Checkbox</type>
</CustomField>