force-app/main/default/objects/WorkOrderLineItem/fields/Sales_Order_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Integration_Status__c</fullName>
    <formula>TEXT(WorkOrder.Sales_Order__r.Integration_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Integration Status</label>
    <type>Text</type>
</CustomField>