force-app/main/default/objects/WorkOrderLineItem/fields/Send_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Send_Timesheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Timesheet</label>
    <type>Checkbox</type>
</CustomField>