force-app/main/default/objects/WorkOrderLineItem/fields/TECH_Goods_3rd_Party_Res_incl_7_5__c.field-meta.xml
<CustomField>
    <fullName>TECH_Goods_3rd_Party_Res_incl_7_5__c</fullName>
    <description>Field used for DPTI monthly billing report</description>
    <formula>IF( Billable_Hours__c &gt;0, NULL,  UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goods + 3rd Party Res. (incl. 7.5%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>