force-app/main/default/objects/WorkOrderLineItem/fields/TECH_Labour_Rate__c.field-meta.xml
<CustomField>
    <fullName>TECH_Labour_Rate__c</fullName>
    <description>Field used for DPTI montly reporting</description>
    <formula>IF(Billable_Hours__c &gt;0, UnitPrice , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labour Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>