force-app/main/default/objects/WorkOrderLineItem/fields/TECH_Materials_Qty__c.field-meta.xml
<CustomField>
    <fullName>TECH_Materials_Qty__c</fullName>
    <description>Field used for DPTI montly reporting</description>
    <formula>IF( Billable_Hours__c &gt;0, NULL,  Quantity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Materials Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>