force-app/main/default/objects/WorkOrderLineItem/fields/TECH_Total_ex_GST__c.field-meta.xml
<CustomField>
    <fullName>TECH_Total_ex_GST__c</fullName>
    <description>Field used for DPTI monthly reporting</description>
    <formula>Quantity * UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (ex. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>