force-app/main/default/objects/WorkOrderLineItem/fields/TECH_Work_Order_Territory_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>TECH_Work_Order_Territory_Branch_Code__c</fullName>
    <formula>ServiceTerritory.Branch_Code__c</formula>
    <label>Work Order Territory Branch Code</label>
    <type>Text</type>
</CustomField>