force-app/main/default/objects/WorkOrderLineItem/fields/Temp_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Temp_Billable_Hours__c</fullName>
    <label>Temp Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>