force-app/main/default/objects/WorkOrderLineItem/fields/Temp_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Temp_End_Date__c</fullName>
    <description>This field is used for WorkOrderLineItemTrigger to split transactino</description>
    <label>Temp End Date</label>
    <type>DateTime</type>
</CustomField>