force-app/main/default/objects/WorkOrderLineItem/fields/Total_incl_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_incl_GST__c</fullName>
    <description>Field used for DPTI monthly reporting</description>
    <formula>GST__c + (Quantity *  UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (incl. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>