force-app/main/default/objects/WorkOrderLineItem/fields/Usage_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Usage_per_hour__c</fullName>
    <formula>PricebookEntry.Usage_per_hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>