force-app/main/default/objects/WorkOrderLineItem/fields/Within_Current_Payroll_Period__c.field-meta.xml
<CustomField>
    <fullName>Within_Current_Payroll_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this transaction was validated against Payroll</description>
    <label>Within Current Payroll Period</label>
    <type>Checkbox</type>
</CustomField>