force-app/main/default/objects/WorkOrderLineItem/validationRules/VR_WOL01_PreventEditWhenSAFinished.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_WOL01_PreventEditWhenSAFinished</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
NOT(ISCHANGED(Within_Current_Payroll_Period__c)),
NOT(ISCHANGED(Sync_With_Pronto__c)),
NOT(ISCHANGED(Integration_Status__c)) ) &amp;&amp;
Manual_Override__c = FALSE &amp;&amp;
(ISPICKVAL(Service_Appointment__r.Status, &#39;Completed&#39;) || ISPICKVAL(Service_Appointment__r.Status, &#39;Cannot Complete&#39;))</errorConditionFormula>
    <errorMessage>Transactions cannot be edited or created after your service appointment is Completed/Cannot Complete</errorMessage>
</ValidationRule>