force-app/main/default/objects/WorkOrderLineItem/validationRules/VR_WOL02_RecordLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_WOL02_RecordLocked</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  
NOT(ISCHANGED(Integration_Status__c)) &amp;&amp;
ISPICKVAL(Integration_Status__c, &#39;Waiting Confirmation&#39;)</errorConditionFormula>
    <errorMessage>The record cannot be updated as it is integrated with Pronto</errorMessage>
</ValidationRule>