force-app/main/default/objects/WorkOrderLineItem/validationRules/VR_WOL03_ManualOverrideReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_WOL03_ManualOverrideReasonRequired</fullName>
    <active>true</active>
    <errorConditionFormula>Manual_Override__c &amp;&amp;  ISBLANK( Manual_Override_Reason__c )</errorConditionFormula>
    <errorDisplayField>Manual_Override_Reason__c</errorDisplayField>
    <errorMessage>Please specify a Manual Override Reason</errorMessage>
</ValidationRule>